<resources>
    <string name="app_name">Charging workshop</string>
    <string name="charge_task">charge_task</string>
    <string name="charge_service">charge_service</string>
    <string name="charge_foreground_service">charge_foreground_service</string>
    <string name="charge_is_audio">charge_is_audio</string>
    <string name="charge_ho_bias">charge_ho_bias</string>
    <string name="charge_sounds">charge_sounds</string>
    <string name="charge_screen_on_open">charge_screen_on_open</string>
    <string name="charge_click_close">charge_click_close</string>
    <string name="charge_keep_show">charge_keep_show</string>
    <string name="charge_boot_start">charge_boot_start</string>
    <string name="is_clear_recent">is_clear_recent</string>
    <string name="is_not_open_on_full">is_not_open_on_full</string>

    <string name="audio_flags">audio_flags</string>
    <string name="b_url">https://space.bilibili.com/12845795</string>
    <string name="github_url">https://github.com/RyensX/ChargingWorkshop</string>
    <string name="start_use_text">Start using</string>
    <string name="sound_list">Audio List</string>

    <string name="video_res_path_format">
        \n
        Normal Charging:\n
        %s
        \n
        Fast Charging:\n
        %s
    </string>

    <string name="audio_setting_help">
        Currently, audio playback is supported in five states:\n
        They are:\n
        1. Low Battery: 0-20% battery\n
        2. Medium Battery: 21-70% battery\n
        3. High Battery: 71-99% battery\n
        4. Full: 100% (Audio will keep playing after being fully charged, I guess nobody wants to keep it plugged in after it's full?)\n
        5. Unplugged\n
        Other tips:\n
        1. Clicking on an audio will pop up a corresponding menu, allowing you to add Flags for different states so that it can be played in different states.\n
        2. An audio supports setting multiple Flags, and if a state has multiple audios, one will be randomly selected to play.\n
        3. If a Flag already exists, setting it again will clear that Flag.\n
    </string>
    <string name="per_desc">
        The permissions that need to be granted manually above are represented differently on different systems. If you find that the application cannot display outside of the app or on the lock screen during operation, it is likely that there are special permission restrictions on the system, and you need to find the corresponding permission and grant it yourself.
    </string>
</resources>
