<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="About"
        app:iconSpaceReserved="false">
        <Preference
            android:key="version"
            android:title="Version"
            app:iconSpaceReserved="false" />
        <Preference
            android:summary="Free entertainment software, for learning and communication purposes only"
            android:title="Statement"
            app:iconSpaceReserved="false" />
        <Preference
            android:summary="Bilibili/Coolapk @Ryens Click to follow"
            android:title="Developer"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/b_url" />
        </Preference>
        <Preference
            android:summary="Click to jump to Github"
            android:title="Open Source Code"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_url" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Charging Related"
        app:iconSpaceReserved="false">
        <Preference
            android:key="video"
            android:title="Charging Animation Path"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/charge_service"
            android:persistent="false"
            android:summary="When enabled, the charging animation will be displayed when the charger is plugged in"
            android:title="Charging Guardian"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/charge_foreground_service"
            android:summary="Recommended to enable, otherwise the service is easily killed by the system in the background, the disadvantage is that it will continuously display a notification"
            android:title="Set as Foreground Service"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/charge_service"
            android:key="@string/charge_screen_on_open"
            android:summary="Display the animation on screen when locked, effectively saving your charging port"
            android:title="Screen-on Guardian"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/charge_service"
            android:key="@string/charge_keep_show"
            android:summary="When enabled, the charging animation will stay on"
            android:title="Guardian Always On"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="@string/charge_service"
            android:key="@string/charge_click_close"
            android:summary="Tap to close the display when the charging animation is shown"
            android:title="Touch to close"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/is_not_open_on_full"
            android:summary="Do not pop up the animation when plugging in the charger while the phone is in full screen"
            android:title="Do Not Disturb Mode"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/charge_boot_start"
            android:summary="Automatically start the charging guardian service on boot, please make sure to grant auto-start permission"
            android:title="Boot Start"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <com.su.charging.view.preference.HelpPreferenceCategory
        android:key="@string/charge_sounds"
        android:title="Audio Settings"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/charge_is_audio"
            android:summary="Caution!!! This may cause you social embarrassment, please use with caution"
            android:title="Charging Guardian Voice"
            app:iconSpaceReserved="false" />

        <PreferenceCategory
            android:key="@string/sound_list"
            android:title="@string/sound_list"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false">

            <Preference
                android:key="audio"
                android:title="Audio Path"
                app:iconSpaceReserved="false" />
            <Preference
                android:icon="@drawable/ic_baseline_warning_24"
                android:key="clear_audio_flags"
                android:title="Clear Audio Configuration"
                app:iconSpaceReserved="false" />

        </PreferenceCategory>

    </com.su.charging.view.preference.HelpPreferenceCategory>

    <PreferenceCategory
        android:title="Other"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/is_clear_recent"
            android:summary="When enabled, the icon will not be displayed in the background, providing a more immersive experience"
            android:title="Hide Recent Tasks"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</PreferenceScreen>
